--- a/_columns/The_Big_Picture/2024-12-06.md
+++ b/_columns/The_Big_Picture/2024-12-06.md
@@ -10,88 +10,8 @@ author: MICHAEL LARKIN
 
 
 
-The stock market continued its upward march following a Goldilocks jobs report Friday, though the Dow Jones Industrial Average lagged. A key inflation reading is now set for the coming week.
 
+The stock market continued its upward march following a Goldilocks jobs report Friday, though the Dow Jones Industrial Average lagged. A key inflation reading is now set for the coming week. The Nasdaq composite closed at a record high after ending the session up 0.8%. This helped it post a weekly gain of 3.3%. The tech-heavy index has now risen…
 
-The Nasdaq composite closed at a record high after ending the session up 0.8%. This helped it post a weekly gain of 3.3%. The tech-heavy index has now risen for the past three weeks in a row and sits clear of all its moving averages. It now holds a jaw-dropping gain of 32.3% for 2024.
-
-
-
-
-The S&P 500 also closed at an all-time high level after popping 0.3% Friday, helping it to a weekly lift of 1%. The benchmark index pulled further away from its [21-day exponential average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) and now holds an annualized gain of 27.7%.
-
-
-Decliners outstripped advancers on the New York Stock Exchange while the converse was true on the Nasdaq. Volume was lower on both exchanges.
-
-
-The Dow Jones Industrial Average stood out for the wrong reasons after falling 0.3% Friday. It closed the week down 0.6% but remains near all-time high levels. **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) was the worst laggard on the much-watched index while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) made the biggest gains.
-
-
-Small caps also made progress, with the Russell 2000 ending the day up 0.5%. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) was stronger, notching a 1.6% gain Friday.
-
-
-It remains a good time to be buying stocks, but with the S&P 500 nearly 4% above its 50-day line — and the Nasdaq composite more than 6% above the benchmark — the risk of a pullback is increasing. This warrants extra caution.
-
-
-Jobs Report Strong, Inflation Data Due
---------------------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120624.jpg)Indexes took a stronger-than-expected jobs report in stride. The U.S. economy added 227,000 nonfarm jobs in November, well in excess of the 211,000 expected by economists. Despite this, the unemployment rate from October's 4.1% increased to 4.2% for November. This was seen as a Goldilocks report and is not expected to change the Fed's view on cutting rates at its Dec. 18 meeting.
-
-
-A full slate of economic data is due in the coming week, with wholesale inventories data coming Monday, a third-quarter U.S. productivity reading due Tuesday and an import price index report coming Friday.
-
-
-But inflation will be the biggest focus for the week. Most importantly, the Consumer Price Index reading is scheduled for Wednesday. Headline CPI is seen rising 2.7% year-over-year while core prices are expected to post an annualized rise of 3.2%. Producer Price Index data is due Thursday.
-
-
-A number of [noteworthy earnings reports are also due](https://www.investors.com/research/earnings-preview/oracle-stock-probes-all-time-highs-software-giant-in-new-growth-phase/). These include software firms **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **MongoDB** ([MDB](https://research.investors.com/quote.aspx?symbol=MDB)), along with retailers **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and [Leaderboard stock](https://get.investors.com/leaderboard/) **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)).
-
-
-Lululemon Earnings Help This Stock Market Group
------------------------------------------------
-
-
-A majority of the [S&P 500 sectors ended Friday lower](https://www.investors.com/category/etfs-and-funds/sectors/). Consumer discretionary and communication services were the strongest areas while energy and utilities lagged the most.
-
-
-
-As ever, the relative performance of Investor's Business Daily's 197 industry groups offered a richer account of the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
-
-
-Specialty retailers — boosted by **Ulta Beauty's** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) post-earnings bounce — were the among the top performers Friday along with medical software plays, and fiber-optics stocks.
-
-
-Apparel retailers were also strong, boosted by **Lululemon Athletica** ([LULU](https://research.investors.com/quote.aspx?symbol=LULU)), which soared nearly 16% after the firm beat on the top and bottom lines.
-
-
-In contrast, a variety of energy stocks — including oil and gas explorers, drillers, field services plays, and coal miners — all lagged. Foreign banks and agricultural operations firms also struggled.
-
-
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120624.pdf).
-
-
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
-
-
-**YOU MAY ALSO LIKE:**
-
-
-[This Sector Leader On 72% Run Eyes Fresh Buy Point As Funds Load Up](https://www.investors.com/stock-lists/sector-leaders/china-stock-atour-lifestyle-atat-stock-2/)
-
-
-[Nvidia-backed AI Stock Surges. Why Massive Rally Poses Risks.](https://www.investors.com/news/technology/soundhound-stock-ai-voice-technology-torchys-tacos/)
-
-
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
-
-
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
-
-
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
-
-
-
+[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fdow-jones-stock-market-nasdaq-sp500-jobs-report-cpi-inflation-lululemon%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
