--- a/_columns/The_Big_Picture/2024-12-09.md
+++ b/_columns/The_Big_Picture/2024-12-09.md
@@ -10,146 +10,8 @@ author: DAVID SAITO-CHUNG
 
 
 
-Put that "Nasdaq 20,000" hat in the drawer for now. The stock market decided on Monday that taking profits was on order for the day.
 
+Put that "Nasdaq 20,000" hat in the drawer for now. The stock market decided on Monday that taking profits was on order for the day. The Nasdaq headed into Monday's action with three straight weekly gains on its belt. On Monday morning, it eked out an all-time high of 19,872 before reversing. Thus, a 0.6% decline likely produced little surprise…
 
-The Nasdaq headed into Monday's action with three straight weekly gains on its belt. On Monday morning, it eked out an all-time high of 19,872 before reversing. Thus, a 0.6% decline likely produced little surprise to most investors. It also seems reasonable in the context of the Nasdaq composite's gains of 1.7%, 1.1% and 3.3% in the prior three weeks.
-
-
-
-
-The Nasdaq started 2024 at 15,011. At Monday's peak, it's gained an impressive 32% year to date.
-
-
-The S&P 500, which also had romped higher three weeks in a row, also gave back 0.6% on Monday. The large-cap benchmark had rallied 3.7% during the prior three-week run. The Russell 2000 surrendered 0.7%, while the Dow Jones Industrial Average eased 0.5%.
-
-
-Stock Market Today
-------------------
-
-
-For now, it's fair to say the profit-taking looks normal. Watch to see if the Nasdaq posts an inside week. That is, do this week's high and low fall inside the high and low of the prior week? If yes, such stock market action would hint that the selling is controlled.
-
-
-Volume grew significantly vs. Friday's session on both main exchanges. Thus, both the Nasdaq and S&P 500 chalked up a [fresh distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).
-
-
-As seen in the Market Pulse table, three distribution days do not pose as an unusually heavy amount of professional selling.
-
-
-
-
----
-
-
-[**Microsoft Stock Surpasses An Early Entry; Why It's A Buy Now**](https://www.investors.com/research/microsoft-msft-stock-buy-now/)
-
-
-
-
----
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120924-228x300.jpg)
-
-
-The Nov. 15 distribution on the S&P 500, a 1.3% slide, would disappear on the count after 25 trading days pass. The Nov. 25 stalling day is rare. IBD research has found that stalling days by themselves do not lead to major market tops. Instead, heavy distribution offers a stronger signal that the stock market has peaked.
-
-
-That said, Monday's stock market moves also underlined the importance of buying with discipline. Some stocks, such as **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)), have seen their recent rallies nearly go vertical. Such moves are unsustainable.
-
-
-AppLovin became ripe for profit-taking after crossing 400 for the first time. At Friday's peak, the app development platform reached a breathtaking stock market valuation of $140 billion. For perspective, if AppLovin held a place in the Dow Jones Industrial Average, it would be the 24th largest member in terms of market capitalization.
-
-
-From 100 To 400 In Three Months
--------------------------------
-
-
-AppLovin fell 58 points on Monday, the most in a single session since the Sept. 11 breakout. Volume nearly tripled usual levels. After a strong run-up, this sell-off also serves as a timely signal to take at least some profits. AppLovin remains 51% above its rising 50-day moving average.
-
-
-
-Other stock market leaders taking it on the chin hard? Bitcoin-related firms sold off, including **Coinbase** ([COIN](https://research.investors.com/quote.aspx?symbol=COIN)), **Hut 8** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Mara** ([MARA](https://research.investors.com/quote.aspx?symbol=MARA)). All three reside in the IBD 50. All but two names in the IBD 50 fell, as the index tumbled 3.8%.
-
-
-Hut has done very well since it cleared a six-day handle on its very deep cup pattern at 18.39. Daily swings have gotten wilder, and yet the operator of industrial-scale bitcoin mining operations has not yet even pierced its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) since the Nov. 6 breakout.
-
-
-One of the day's best performing assets was crude oil. West Texas Intermediate futures rose more than 1.4% to $68.19 a barrel. However, within the stock market, oil stocks are not showing up as a bastion of leadership.
-
-
-Looking at IBD's daily ranking of 197 industry groups, just one oil-industry-related group ranks in the top 40 in terms of six-month price leadership. Oil and gas royalty trust stocks currently ranks No. 1. But the fact that none of its peer groups are doing as well makes this group's move an anomaly for now.
-
-
-Oil and gas transport and pipeline ranked 69th, down from 56 three months ago, followed by oil machinery (71) and U.S. exploration and production (86). [See the full rankings at IBD Data Tables](https://www.investors.com/ibd-data-tables/).
-
-
-
-
----
-
-
-[**What Is Relative Strength?**](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)
-
-
-
-
----
-
-
-Value Stocks Still Lagging Growth
----------------------------------
-
-
-Strong gains by Chinese equities trading in the U.S. stock market indicated that some investors are eager to see the world's No. 2 economy follow through on promises to boost growth. Yet a question for most U.S. investors is will we see more rotation within the domestic stock market itself? One way to check: Look at growth and value-oriented exchange traded funds.
-
-
-The iShares Russell 1000 Value ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) slumped 0.6% on Monday and notched its sixth loss in a row. Its gain of 2.6% since the start of the fourth quarter pales in comparison to a 9.2% advance by iShares Russell 1000 Growth ([IWF](https://research.investors.com/quote.aspx?symbol=IWF)), which declined nearly 0.7% Monday.
-
-
-Vanguard Value ([VTV](https://research.investors.com/quote.aspx?symbol=VTV)), which seeks value-type stocks within the large-cap universe, posted its own sixth straight loss and has a measly gain of 1.5% since Oct 1. The ETF looks poised for a test of support at the rising 50-day moving average.
-
-
-Too Much Stock Market Optimism?
--------------------------------
-
-
-In the short term, a pullback may be nigh. Why? Optimism among stock market pundits has reached levels that have coincided with pullbacks and meaningful corrections. The thinking here is: When the crowd is extremely excited about stocks, who is left to buy?
-
-
-[Bullishness among newsletter writers tracked weekly by Investors Intelligence](https://research.investors.com/psychological-market-indicators/chart?type=bullsbears) ramped up to 62.9% as of last week. That's the highest level of stock market optimism since a 64.2% reading in the week ended July 26. In August, typically a time when equities cool off, the Nasdaq finished almost 0.7% higher for the month. But it had fallen as much as 10.7% that month as well.
-
-
-[A monthly chart on MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*j0c4ek*_gcl_au*MTQzMjEwMTg0OS4xNzMxMjU3MzY0*_ga*MTA4MzY4MTI4NC4xNzMzNjg0MTAy*_ga_K2H7B9JRSS*MTczMzY4NDEwMS4xLjEuMTczMzY4NDExOS40Mi4wLjA.) shows just how volatile that month proved.
-
-
-The S&P 500 rallied 2.3% in August. But it was a wild month as investors worried about both inflation and weak July nonfarm payrolls at the time.
-
-
-(See more views on investor sentiment by clicking on [IBD's market psychological indicators](https://research.investors.com/psychological-market-indicators/) page.)
-
-
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120924.pdf)
-
-
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
-
-
-**YOU MIGHT ALSO LIKE:**
-
-
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
-
-
-[IBD 50 Stocks To Watch](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
-
-
-[This Is Still The Golden Rule Of Investing](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)
-
-
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
-
-
-
+[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-dow-jones-nasdaq-sp500-applovin-stock%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
