--- a/_columns/The_Big_Picture/2024-12-10.md
+++ b/_columns/The_Big_Picture/2024-12-10.md
@@ -10,116 +10,8 @@ author: KEN SHREVE
 
 
 
-The major indexes gave back early gains in the stock market Tuesday as growth stocks succumbed to more selling. After slumping 4.2% in higher volume Monday, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell another 2% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).
 
+The major indexes gave back early gains in the stock market Tuesday as growth stocks succumbed to more selling. After slumping 4.2% in higher volume Monday, the Innovator IBD 50 ETF (FFTY) fell another 2% and closed below its 21-day exponential moving average. The Russell 2000 small-cap index slipped 0.4% but held support at its 21-day line, while the Dow…
 
-The Russell 2000 small-cap index slipped 0.4% but held support at its 21-day line, while the Dow Jones Industrial Average and S&P 500 closed with slightly milder losses.
-
-
-
-
-Tuesday's session served up a few chart breakouts. **Badger Meter** ([BMI](https://research.investors.com/quote.aspx?symbol=BMI)) cleared a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) with a 229.32 buy point. The company is a provider of flow measurement and water quality monitoring services. Volume was about double the stock's average.
-
-
-Meanwhile, news of a new [quantum computing chip](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/) from Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) fueled a cup-with-handle breakout. Alphabet jumped more than 5% in strong volume and cleared a 182.49 entry.
-
-
-In the retail sector, **Ollie's Bargain Outlet** ([OLLI](https://research.investors.com/quote.aspx?symbol=OLLI)) jumped 13% and cleared a 22-week consolidation despite a mixed [earnings report](https://www.investors.com/news/ollies-bargain-outlet-olli-united-natural-foods-unfi-earnings-buy-point/).
-
-
-Stock Market Today
-------------------
-
-
-The Nasdaq composite's early gain of nearly 0.8% turned into a loss of 0.3% by the close. The Dow Jones Industrial Average and S&P 500 also lost about 0.3%.
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP121024.jpg)
-
-
-The S&P 500 held up relatively well despite an [earnings sell-off](https://www.investors.com/news/technology/oracle-stock-meta-ai-cloud-earnings-dec-2024/) for **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)), which gapped below its 50-day moving average.
-
-
-Declining stocks outnumbered advancers by less than 2-to-1. Volume fell on both main exchanges after the Nasdaq composite and S&P 500 marked rare distributions day Monday, falling 0.6% in higher volume.
-
-
-basis points to 4.23%, ahead of next week's two-day Federal Reserve meeting. The Federal Open Market Committee is widely expected to lower its key lending rate by another 25 basis points to a range of 4.25% to 4.50%.
-
-
-But the latest reading on consumer prices, due Wednesday at 8:30 a.m. ET, could sway that decision. On a year-over-year basis, core prices are expected to be up 3.3% in November, unchanged from October. But headline prices, year over year, are expected to tick higher to 2.7% from 2.6%.
-
-
-The Fed's preferred inflation gauge — the core personal consumption expenditures index — on Nov. 27 [came in at 2.8%](https://www.investors.com/news/economy/pce-inflation-oct-federal-reserve-sp-500/), just above the 2.7% consensus. Sticky inflation is a concern for the stock market, although the jobs market and overall consumer spending continue to hold up relatively well.
-
-
-Airlines Strong, Chips Weak
----------------------------
-
-
-Airline stocks were among the day's best performers. Sentiment was positive in the group after **Alaska Air** ([ALK](https://research.investors.com/quote.aspx?symbol=ALK)) issued strong earnings guidance for 2025 and also announced a $1 billion share repurchase program. Alaska Air completed its acquisition of Hawaiian Holdings in September.
-
-
-While the big leaders in the group like Alaska Air and **United Airlines** ([UAL](https://research.investors.com/quote.aspx?symbol=UAL)) are extended past proper entry points, two other strong performers are near new entries. **SkyWest** ([SKYW](https://research.investors.com/quote.aspx?symbol=SKYW)) is testing support at its [10-week moving average](https://www.investors.com/how-to-invest/investors-corner/top-stocks-tend-to-do-this-after-technical-breakout/) for the first time after a breakout from a cup base in October. **Delta Air Lines** ([DAL](https://research.investors.com/quote.aspx?symbol=DAL)), meanwhile, is trading tightly near highs after a breakout during the week ended Oct. 18.
-
-
-
-
----
-
-
-[**How To Know When It's Time To Sell Your Favorite Stock**](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)
-
-
-
-
----
-
-
-Semiconductor stocks lagged again. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) fell 2.5% and closed just above its 200-day moving average. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) suffered a bearish outside day and closed more than 2% below its 50-day line, falling 2.7% in light turnover. Group peer **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) slumped 4% in higher volume and also closed below its 50-day line with earnings due Thursday after the close.
-
-
-Chip foundry **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) reported a 34% increase in November sales, but investors still sent shares lower by more than 3%. TSMC closed just above its 50-day line.
-
-
-Waystar And Insulet Jump
-------------------------
-
-
-Software firm **Waystar** ([WAY](https://research.investors.com/quote.aspx?symbol=WAY)), which specializes in health care payments, was a notable gainer in the [MarketSurge Growth 250](https://marketsurge.investors.com), up 4.5%. The weekly chart has the look of a flat base, but Waystar has been consolidating for only a little over four weeks. Still, Waystar came to within five cents of its 52-week high of 33.25.
-
-
-**Insulet** ([PODD](https://research.investors.com/quote.aspx?symbol=PODD)) also moved well in the medical products group. The maker of insulin delivery systems jumped nearly 4% in higher volume, clearing a short [trendline](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trend-lines-and-find-lower-buy-points-in-stock-charts/). Insulet's weekly chart has the look of a flat base but it's a little short. Still, it's in position for a breakout try over its 52-week high of 279.40.
-
-
-The real challenge for investors now is navigating an environment where extended stocks are the rule, not the exception. If you've taken some gains in some big winners and put fresh money to work, how are the new buys doing? Have they made meaningful progress? Or are they treading water or even below your entry?
-
-
-If a new buy doesn't go as planned, don't be afraid to keep losses small. And if repeated new buys aren't making headway, listen to the market's message and take your foot off the accelerator.
-
-
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121024.pdf)
-
-
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
-
-
-**YOU MAY ALSO LIKE:**
-
-
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
-
-
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
-
-
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
-
-
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
-
-
-[Futures: Two Titans Jump But Growth Skids Again](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-google-tesla-strong-palantir-nvidia-fall-cpi-inflation-due/)
-
-
-
+[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-pares-early-gains-cpi-data-top-rated-growth-stocks-pressured%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
