--- a/_columns/The_Big_Picture/zh-cn/2024-12-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-04.md
@@ -10,151 +10,9 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market got through new economic data, earnings reports and a public appearance by Federal Reserve Chairman Jerome Powell with ease Wednesday, as the Nasdaq and S&P 500 climbed for a fourth consecutive day.  
-周三，纳斯达克和标准普尔 500 指数连续第四天攀升，股市轻松度过了新的经济数据、收益报告和美联储主席杰罗姆鲍威尔的公开露面。
 
+The stock market got through new economic data, earnings reports and a public appearance by Federal Reserve Chairman Jerome Powell with ease Wednesday, as the Nasdaq and S&P 500 climbed for a fourth consecutive day. Both major indexes rose to record highs again Wednesday, and the Dow Jones Industrial Average closed above 45,000 for the first time. The Nasdaq led…  
+周三，纳斯达克和标准普尔 500 指数连续第四天攀升，股市轻松度过了新的经济数据、收益报告和美联储主席杰罗姆鲍威尔的公开露面。周三，两大主要指数再次升至历史新高，道琼斯工业平均指数首次收于 45,000 点以上。纳斯达克指数领先...
 
-Both major indexes rose to record highs again Wednesday, and the Dow Jones Industrial Average closed above 45,000 for the first time.  
-周三，两大主要指数再次升至历史新高，道琼斯工业平均指数首次收于 45,000 点以上。
-
-
-The Nasdaq led with a 1.3% jump, making it 11 gains in the past 12 sessions. The S&P 500 climbed 0.6%, also its 11th gain in the past 12 sessions. The technology sector outperformed, giving the Nasdaq plenty of tailwind.  
-纳斯达克指数以 1.3% 的涨幅领涨，在过去 12 个交易日中上涨了 11 次。标准普尔 500 指数上涨 0.6%，也是过去 12 个交易日中的第 11 次上涨。科技板块表现出色，为纳斯达克提供了充足的顺风。
-
-
-
-
-The Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) rose 1.8% to an all-time high, clearing an alternative [buy point](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/) at 237.94. The exchange traded fund initially broke out of a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) Sept. 26 and is up 6% from a 227.37 buy point.  
-科技精选板块 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 上涨 1.8% 至历史新高，在 237.94 点清除了另一个[买入点](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/)。该交易所交易基金最初于 9 月 26 日突破了带[柄的杯子底部](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)，从 227.37 的买入点上涨了 6%。
-
-
-A series of positive earnings reports made the tech sector a winner. Chipmaker **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)) beat expectations on [strong demand for its custom chips](https://www.investors.com/news/technology/marvell-stock-marvel-earnings-custom-ai-chips-q32024/) for artificial intelligence applications. **Pure Storage** ([PSTG](https://research.investors.com/quote.aspx?symbol=PSTG)) soared 22% to its highest close since July after a [solid earnings report](https://www.investors.com/news/technology/pure-storage-stock-earnings-q3-2024-ai/).  
-一系列积极的收益报告使科技行业成为赢家。芯片制造商 **Marvell Technology** （[MRVL）](https://research.investors.com/quote.aspx?symbol=MRVL) 因其用于人工智能应用的[定制芯片的强劲需求](https://www.investors.com/news/technology/marvell-stock-marvel-earnings-custom-ai-chips-q32024/)而超出预期。**Pure Storage** （[PSTG）](https://research.investors.com/quote.aspx?symbol=PSTG) 在公布[稳健的收益报告](https://www.investors.com/news/technology/pure-storage-stock-earnings-q3-2024-ai/)后飙升 22% 至 7 月以来的最高收盘价。
-
-
-Software stocks in particular were brilliant. Seven of the 12 best-performing industry groups Wednesday were in that sector.  
-软件股尤其出色。周三表现最好的 12 个行业组中有 7 个属于该行业。
-
-
-Dow Races To New Milestone道琼斯指数迈向新的里程碑
---------------------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120424.jpg)The Dow Jones Industrial Average rose 0.7% and made one of its fastest runs to a 1,000-point milestone. The index took only 16 trading days to get from 44,000 to 45,000. That's the third-fastest 1,000-point jaunt on record, according to Dow Jones Market Data.  
-道琼斯工业平均指数上涨 0.7%，创下最快达到 1,000 点里程碑的水平之一。该指数仅用了 16 个交易日就从 44,000 点上涨到 45,000 点。根据道琼斯市场数据，这是有记录以来第三快的 1,000 点短途旅行。
-
-
-**Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) showed up big time for the Dow. The stock gapped up to a record high in heavy volume and provided the Dow with 224 of its 308-point advance. Late Tuesday, the software company issued a [mixed October-quarter report](https://www.investors.com/news/technology/salesforce-stock-salesforce-earnings-news-q32024/) but analysts cheered the company's progress in — what else — artificial intelligence products.  
-**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 在道琼斯指数中表现抢占先机。该股跳空飙升至历史新高，道琼斯指数上涨了 308 点中的 224 点。周二晚些时候，这家软件公司发布了一份[喜忧参半的 10 月季度报告](https://www.investors.com/news/technology/salesforce-stock-salesforce-earnings-news-q32024/)，但分析师对该公司在人工智能产品方面的进步表示欢呼。
-
-
-The Russell 2000 added 0.4% as it tried to snap out of a weeklong slumber. The small-cap benchmark briefly made a record high last week but has been slipping since.  
-罗素 2000 指数上涨 0.4%，因为它试图从长达一周的沉睡中醒来。小盘股基准指数上周短暂创下历史新高，但此后一直在下滑。
-
-
-Volume fell moderately on the New York Stock Exchange and rose on the Nasdaq. The Nasdaq's solid gain in higher volume could be viewed as a secondary [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/), a shot of confidence for the stock market.  
-纽约证券交易所的成交量小幅下降，纳斯达克的成交量上升。纳斯达克指数在成交量增加中的稳健上涨可被视为第二个[后续交易日](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)，是对股市的信心。
-
-
-Advancing stocks topped decliners by a 9-to-7 ratio on the Nasdaq. But winners and losers were nearly even on the NYSE.  
-在纳斯达克指数中，上涨的股票以 9 比 7 的比率领先于下跌的股票。但在纽约证券交易所，赢家和输家几乎持平。
-
-
-Stock Market Overheating?股市过热？
-------------------------------
-
-
-With few distribution days on the ledger, and indexes making record highs, the stock market gives investors justification to continue with 80% to 100% exposure, as IBD is recommending.  
-正如 IBD 所建议的那样，由于账本上的分配天数很少，而且指数创下历史新高，股市为投资者提供了继续 80% 至 100% 敞口的理由。
-
-
-But could the major indexes be getting overheated? The signals are mixed.  
-但主要指数会不会过热了？信号喜忧参半。
-
-
-The S&P 500 is 3.9% above the 50-day moving average, and the Nasdaq is nearly 6% above its 50-day line. That's the widest gap since the indexes made short-term highs in mid-November.  
-标准普尔 500 指数比 50 天移动平均线高出 3.9%，纳斯达克指数比其 50 天移动平均线高出近 6%。这是自 11 月中旬指数创下短期高点以来的最大差距。
-
-
-That's getting stretched, but is not necessarily cause for alarm. While above their 50-day lines, SPDR S&P 500 Trust ([SPY](https://research.investors.com/quote.aspx?symbol=SPY)) and Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) are still below the percentages that historically signal stock market highs.  
-这有点紧张，但不一定需要引起警惕。虽然高于 50 天线，但 SPDR S&P 500 Trust （[SPY](https://research.investors.com/quote.aspx?symbol=SPY)） 和 Invesco QQQ Trust （[QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)） 仍低于历史上预示股市高点的百分比。
-
-
-The Nasdaq's short-term overbought-oversold indicator in [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) has climbed to about 500. Spikes to that level signaled index pullbacks in early April, May, July and early September, but not in late September.  
-纳斯达克在 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 中的短期超买超卖指标已攀升至 500 左右。飙升至该水平预示着指数在 4 月初、5 月、7 月和 9 月初回调，但 9 月下旬则没有。
-
-
-
-
----
-
-
-[**See Which Stocks Are In The Leaderboard Model Portfolio  
-查看排行榜模型投资组合中有哪些股票**](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
-
-
-
-
----
-
-
-Investor optimism continues to run hot. The Investors Intelligence weekly survey of market newsletters showed bulls rose to 62.9% from 61.3% a week earlier. It's been eight straight weeks that bulls exceed 55%, which the firm considers a danger zone. It's also the most bulls since 64.2% in July.  
-投资者的乐观情绪继续炙手可热。Investors Intelligence 对市场通讯的每周调查显示，多头从一周前的 61.3% 上升到 62.9%。多头已经连续八周超过 55%，该公司认为这是一个危险区域。这也是自 7 月份 64.2% 以来最多的多头。
-
-
-While the stock market may need a little cooling, [seasonal trends are in its favor](https://www.investors.com/market-trend/the-big-picture/stock-market-sp500-nasdaq-dow-jones-tech-stocks/). December tends to be kind to stock investors, especially in the second half of the month.  
-虽然股市可能需要一点降温，但[季节性趋势对其有利](https://www.investors.com/market-trend/the-big-picture/stock-market-sp500-nasdaq-dow-jones-tech-stocks/)。12 月往往对股票投资者有利，尤其是在下半月。
-
-
-Stock Market Watches Powell, Economic Data股市关注鲍威尔， 经济数据
--------------------------------------------------------
-
-
-At a New York Times DealBook conference Wednesday afternoon, Powell discussed a range of topics. He said nothing to disrupt the Fed's interest-rate outlook.  
-在周三下午的《纽约时报》DealBook 会议上，鲍威尔讨论了一系列话题。他没有说任何话来扰乱美联储的利率前景。
-
-
-Powell says the U.S. economy is [doing better than it looked in September](https://www.wsj.com/economy/central-banking/december-fed-rate-cut-powell-be4a617f?mod=hp_lead_pos3), when the Fed started to cut interest rates. That gives the central bank more leeway in reducing rates while staying on track to move rates toward a more neutral level, he added.  
-鲍威尔表示，美国经济[的表现比 9 月份](https://www.wsj.com/economy/central-banking/december-fed-rate-cut-powell-be4a617f?mod=hp_lead_pos3)美联储开始降息时要好。他补充说，这让央行在降息方面有更多回旋余地，同时保持将利率推向更中性的水平。
-
-
-Sal Guatieri, senior economist at BMO Capital Markets, said Powell's comments did nothing to alter the view that the Fed will likely trim rates on Dec. 18.  
-BMO Capital Markets 高级经济学家 Sal Guatieri 表示，鲍威尔的言论并没有改变美联储可能会在 12 月 18 日降息的观点。
-
-
-The Fed's Beige Book — released Wednesday afternoon — won't interfere with a rate cut, either, Guatieri added. It found economic activity growing slightly in most Fed districts, with the labor market steady.  
-瓜蒂耶里补充说，美联储周三下午发布的褐皮书也不会干扰降息。研究发现，大多数美联储地区的经济活动略有增长，劳动力市场保持稳定。
-
-
-"Although business contacts warned that 'tariffs pose a significant upside risk to inflation,' that's a worry for another day for the Fed," the economist noted. "It won't dissuade a quarter-point rate cut later this month, barring a surprisingly strong [payrolls report on Friday](https://www.investors.com/news/economy/jobs-report-nov-bls-adp-federal-reserve-rate-cut-outlook-sp-500/)."  
-“尽管商业联系人警告说，'关税对通胀构成重大上行风险'，但这是美联储又一天的担忧，”这位经济学家指出。“它不会阻止本月晚些时候降息 25 个基点，除非周五公布出人意料的强劲[就业报告](https://www.investors.com/news/economy/jobs-report-nov-bls-adp-federal-reserve-rate-cut-outlook-sp-500/)。”
-
-
-The 10-year Treasury yield reversed lower by four basis points to 4.18%.  
-10 年期美国国债收益率逆转下跌 4 个基点至 4.18%。
-
-
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120424.pdf)
-
-
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
-
-
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
-
-
-[See Stocks On The List Of Market Leaders With IBD Leaderboard  
-查看 IBD 排行榜市场领导者名单上的股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
-
-
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
-
-
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
-
-
-
+[Sign In 登录](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-dow-jones-nasdaq-sp500-salesforce-dow-45000%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
