--- a/_columns/The_Big_Picture/zh-cn/2024-12-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-05.md
@@ -10,168 +10,9 @@ author: SCOTT LEHTONEN
 
 
 
-Small caps led the stock market lower Thursday, ending at session lows and pausing as Wall Street braced for Friday's [November jobs report](https://www.investors.com/news/economy/jobs-report-nov-bls-adp-federal-reserve-rate-cut-outlook-sp-500/).  
-小盘股周四带领股市走低，收于盘中低点，并在华尔街为周五的 [11 月就业报告](https://www.investors.com/news/economy/jobs-report-nov-bls-adp-federal-reserve-rate-cut-outlook-sp-500/)做准备时暂停。
 
+Small caps led the stock market lower Thursday, ending at session lows and pausing as Wall Street braced for Friday's November jobs report. The Dow Jones Industrial Average dropped nearly 0.6%, while the S&P 500 dipped nearly 0.2%, as did the tech-heavy Nasdaq composite. But small caps sharply underperformed as the Russell 2000 index lost 1.3%. Volume fell on the…  
+小盘股周四带领股市走低，收于盘中低点，并在华尔街为周五的 11 月就业报告做准备时暂停。道琼斯工业平均指数下跌近 0.6%，而标准普尔 500 指数下跌近 0.2%，以科技股为主的纳斯达克综合指数也是如此。但小盘股表现大幅逊色，罗素 2000 指数下跌 1.3%。成交量下降...
 
-The Dow Jones Industrial Average dropped nearly 0.6%, while the S&P 500 dipped nearly 0.2%, as did the tech-heavy Nasdaq composite. But small caps sharply underperformed as the Russell 2000 index lost 1.3%.  
-道琼斯工业平均指数下跌近 0.6%，而标准普尔 500 指数下跌近 0.2%，以科技股为主的纳斯达克综合指数也是如此。但小盘股表现大幅逊色，罗素 2000 指数下跌 1.3%。
-
-
-
-
-Volume fell on the Nasdaq, and was slightly higher on the New York Stock Exchange from Wednesday's session. But the S&P 500 failed to fall at least 0.2%, so it narrowly avoided a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/). Indexes still have few distribution days over the past five weeks.  
-纳斯达克的成交量下降，纽约证券交易所的成交量比周三略高。但标准普尔 500 指数未能下跌至少 0.2%，因此勉强避免了[派发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。在过去五周内，指数的发行天数仍然很少。
-
-
-Six of the 11 S&P 500 sectors ended lower, with materials, industrials and health care lagging the most. The consumer discretionary, consumer staples and energy were the best sectors of the day.  
-标准普尔 500 指数的 11 个板块中有 6 个板块收低，其中材料、工业和医疗保健板块表现最差。非必需消费品、必需消费品和能源是当天表现最好的板块。
-
-
-Due out early Friday morning, the Labor Department's employment report is expected to show that the U.S. economy added 200,000 jobs in November, up from October's 12,000 increase. The unemployment rate is expected to tick higher to 4.2%, from 4.1%, per Econoday estimates.  
-美国劳工部的就业报告将于周五凌晨公布，预计将显示美国经济在 11 月增加了 200,000 个工作岗位，高于 10 月份的 12,000 个。根据 Econoday 的估计，失业率预计将从 4.1% 上升至 4.2%。
-
-
-
-
----
-
-
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market  
-英伟达、苹果和特斯拉重点介绍如何处理这个股票市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
-
-
-
-
----
-
-
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
-
-
-In the Dow Jones index, **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) and **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) were the top performers Thursday, with gains of 2.2% apiece. Those stocks added a combined 31 points to the Dow's performance.  
-在道琼斯指数中，**3M** （[MMM](https://research.investors.com/quote.aspx?symbol=MMM)） 和**默克** （[MRK](https://research.investors.com/quote.aspx?symbol=MRK)） 周四表现最佳，各上涨 2.2%。这些股票总共使道琼斯指数的表现上涨了 31 点。
-
-
-On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) sold off 5.2% and 1.8%, respectively. Their combined point loss was 235 points. **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also cost the Dow nearly 27 points.  
-不利的一面是，**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 分别下跌 5.2% 和 1.8%。他们的总损失是 235 分。**麦当劳** （[MCD](https://research.investors.com/quote.aspx?symbol=MCD)） 也使道琼斯指数下跌近 27 点。
-
-
-The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) climbed 0.6%. Notably, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched new highs.  
-[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)周四收盘涨跌互现，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 上涨 0.6%。值得注意的是，**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 创下新高。
-
-
-But the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 0.4%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big winners on the session, including **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)), which hit more new highs Thursday.  
-但 Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 0.4%。[在 IBD 50 中](https://research.investors.com/stock-lists/ibd-50/)，有许多大赢家，包括 **Palantir Technologies** （[PLTR），](https://research.investors.com/quote.aspx?symbol=PLTR)周四创下更多新高。
-
-
-
-
----
-
-
-[**Apple Breaks Out, Eclipsing Nvidia In Race For Year-End No. 1  
-Apple 爆发，在年终第一的竞争中超越 Nvidia**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
-
-
-
-
----
-
-
-What Investors Should Do Now投资者现在应该做什么
---------------------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120524-238x300.jpg)
-
-
-As the major stock indexes continue to hit new highs, IBD maintains its recommended exposure level at 80%-100%. Meanwhile, the Nasdaq and S&P 500 are getting a bit extended from their 50-day line, but that's not a huge concern at the moment.  
-随着主要股指不断创下新高，IBD 将其建议的风险敞口水平维持在 80%-100%。与此同时，纳斯达克和标准普尔 500 指数从其 50 日线有所延长，但目前这并不是一个大问题。
-
-
-The S&P 500 is 3.6% above the 50-day moving average, and the Nasdaq is 5.5% above its 50-day line.  
-标准普尔 500 指数比 50 天移动平均线高出 3.6%，纳斯达克指数比其 50 天移动平均线高出 5.5%。
-
-
-As the stock market treks higher, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
-随着股市走高，环境继续需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。确保您监控您的行为不合时宜的头寸，并出售任何触发卖出规则的股票。
-
-
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Icici Bank** ([IBN](https://research.investors.com/quote.aspx?symbol=IBN)), which broke out past a 31.60 cup-with-handle buy point. The Near Pivot list has seven stock ideas on it, and one is **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)), which is approaching a 69.67 buy point.  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)今日突破名单以一只新股为特色：**Icici Bank** （[IBN](https://research.investors.com/quote.aspx?symbol=IBN)），该股突破了 31.60 杯带手柄买入点。Near Pivot 列表上有七个股票想法，其中一个是 **Trip.com** （[TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)），它接近 69.67 的买入点。
-
-
-
-
----
-
-
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems  
-这个行业集团 — 以及 4 家 IPO — 打磨了 20 颗“完美”的宝石**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
-
-
-
-
----
-
-
-Stocks Market Leaders: Apple, Meta, TSMC股市领导者：苹果、Meta、台积电
----------------------------------------------------------
-
-
-Stock market leaders to watch include Dow Jones component **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Meta** **Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Taiwan Semiconductor Manufacturing** ([TSMC](https://research.investors.com/quote.aspx?symbol=TSMC)).  
-值得关注的股市领导者包括道琼斯成分股**苹果** （[AAPL）、](https://research.investors.com/quote.aspx?symbol=AAPL)**Meta****Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 和**台积电** （[TSMC](https://research.investors.com/quote.aspx?symbol=TSMC)）。
-
-
-
-Apple stock is in the buy range past a [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) at 237.49 as a result of a flat base. Shares edged higher Thursday, extending a win streak to five sessions.  
-由于底部平坦，苹果股票处于超过[买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) 237.49 的买入区间。周四，股价小幅走高，将连胜纪录延续至五个交易日。
-
-
-Social media company Meta Platforms is in buy range past a 602.95 entry in a flat base following this week's breakout move. The 5% buy zone tops out at 633.10.  
-社交媒体公司 Meta Platforms 在本周突破后，在平坦的底部进入超过 602.95 的买入区间。5% 买入区域最高为 633.10。
-
-
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) chipmaker Taiwan Semi, better known as TSMC, is [rapidly approaching](https://www.investors.com/research/nvidia-chipmaker-taiwan-semi-tsmc-tsm-stock/) a cup base's 212.60 buy point, per [IBD MarketSurge chart analysis](https://get.investors.com/marketsurge/?artProdLink=MarketSurge). Meanwhile, an early entry at 206.61 is in play.  
-根据 [IBD MarketSurge 图表分析](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 芯片制造商 Taiwan Semi（更广为人知的名称是台积电）正在[迅速接近](https://www.investors.com/research/nvidia-chipmaker-taiwan-semi-tsmc-tsm-stock/)杯底的 212.60 买入点。与此同时，早盘入场点为 206.61。
-
-
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120524.pdf)
-
-
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
-
-
-
-
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
-
-
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
-
-
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
-
-
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
-
-
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
-
-
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
-
-
-
-
-
+[Sign In 登录](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-small-caps-jobs-report-apple-meta-tsmc%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
