--- a/_columns/The_Big_Picture/2024-12-05.md
+++ b/_columns/The_Big_Picture/2024-12-05.md
@@ -10,141 +10,8 @@ author: SCOTT LEHTONEN
 
 
 
-Small caps led the stock market lower Thursday, ending at session lows and pausing as Wall Street braced for Friday's [November jobs report](https://www.investors.com/news/economy/jobs-report-nov-bls-adp-federal-reserve-rate-cut-outlook-sp-500/).
 
+Small caps led the stock market lower Thursday, ending at session lows and pausing as Wall Street braced for Friday's November jobs report. The Dow Jones Industrial Average dropped nearly 0.6%, while the S&P 500 dipped nearly 0.2%, as did the tech-heavy Nasdaq composite. But small caps sharply underperformed as the Russell 2000 index lost 1.3%. Volume fell on the…
 
-The Dow Jones Industrial Average dropped nearly 0.6%, while the S&P 500 dipped nearly 0.2%, as did the tech-heavy Nasdaq composite. But small caps sharply underperformed as the Russell 2000 index lost 1.3%.
-
-
-
-
-Volume fell on the Nasdaq, and was slightly higher on the New York Stock Exchange from Wednesday's session. But the S&P 500 failed to fall at least 0.2%, so it narrowly avoided a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/). Indexes still have few distribution days over the past five weeks.
-
-
-Six of the 11 S&P 500 sectors ended lower, with materials, industrials and health care lagging the most. The consumer discretionary, consumer staples and energy were the best sectors of the day.
-
-
-Due out early Friday morning, the Labor Department's employment report is expected to show that the U.S. economy added 200,000 jobs in November, up from October's 12,000 increase. The unemployment rate is expected to tick higher to 4.2%, from 4.1%, per Econoday estimates.
-
-
-
-
----
-
-
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
-
-
-
-
----
-
-
-Dow Jones Winners And Losers
-----------------------------
-
-
-In the Dow Jones index, **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) and **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) were the top performers Thursday, with gains of 2.2% apiece. Those stocks added a combined 31 points to the Dow's performance.
-
-
-On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) sold off 5.2% and 1.8%, respectively. Their combined point loss was 235 points. **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also cost the Dow nearly 27 points.
-
-
-The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) climbed 0.6%. Notably, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched new highs.
-
-
-But the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 0.4%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big winners on the session, including **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)), which hit more new highs Thursday.
-
-
-
-
----
-
-
-[**Apple Breaks Out, Eclipsing Nvidia In Race For Year-End No. 1**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
-
-
-
-
----
-
-
-What Investors Should Do Now
-----------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120524-238x300.jpg)
-
-
-As the major stock indexes continue to hit new highs, IBD maintains its recommended exposure level at 80%-100%. Meanwhile, the Nasdaq and S&P 500 are getting a bit extended from their 50-day line, but that's not a huge concern at the moment.
-
-
-The S&P 500 is 3.6% above the 50-day moving average, and the Nasdaq is 5.5% above its 50-day line.
-
-
-As the stock market treks higher, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.
-
-
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Icici Bank** ([IBN](https://research.investors.com/quote.aspx?symbol=IBN)), which broke out past a 31.60 cup-with-handle buy point. The Near Pivot list has seven stock ideas on it, and one is **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)), which is approaching a 69.67 buy point.
-
-
-
-
----
-
-
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
-
-
-
-
----
-
-
-Stocks Market Leaders: Apple, Meta, TSMC
-----------------------------------------
-
-
-Stock market leaders to watch include Dow Jones component **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), **Meta** **Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Taiwan Semiconductor Manufacturing** ([TSMC](https://research.investors.com/quote.aspx?symbol=TSMC)).
-
-
-
-Apple stock is in the buy range past a [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) at 237.49 as a result of a flat base. Shares edged higher Thursday, extending a win streak to five sessions.
-
-
-Social media company Meta Platforms is in buy range past a 602.95 entry in a flat base following this week's breakout move. The 5% buy zone tops out at 633.10.
-
-
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) chipmaker Taiwan Semi, better known as TSMC, is [rapidly approaching](https://www.investors.com/research/nvidia-chipmaker-taiwan-semi-tsmc-tsm-stock/) a cup base's 212.60 buy point, per [IBD MarketSurge chart analysis](https://get.investors.com/marketsurge/?artProdLink=MarketSurge). Meanwhile, an early entry at 206.61 is in play.
-
-
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120524.pdf)
-
-
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
-
-
-
-
-**YOU MAY ALSO LIKE:**
-
-
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
-
-
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
-
-
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
-
-
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
-
-
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
-
-
-
-
-
+[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-small-caps-jobs-report-apple-meta-tsmc%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
 
